# XZMU-net-auto_login

./: 1.txt  build.sh  package.json  pnpm-lock.yaml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  xzmu.rs
src/views/: Home.vue  Login.vue
